syntax = "proto3";

import "google/protobuf/any.proto";
import "google/protobuf/descriptor.proto";

message ProcedureCallRequest {
    string client_id = 1;
    string request_id = 2;
    string method = 3;
    map<string, string> headers = 4;
    google.protobuf.Any payload = 5;
}

message ProcedureCallResponse {
    string client_id = 1;
    string request_id = 2;
    map<string, string> headers = 3;
    google.protobuf.Any payload = 4;
}

message BarRequest {
    string payload = 1;
}

message BarResponse {
    string payload = 1;
}

service Foo {
    rpc Bar(BarRequest) returns (BarResponse) {}
}